edits to intro, plots and refs

--- a/output/papers/latex-stuff/librarySweAcoust.bib
+++ b/output/papers/latex-stuff/librarySweAcoust.bib
@@ -78,7 +78,7 @@
 }
 
 @book{bleckert1987,
-  title = {Centralsvensk Diftongering Som Satsfonetiskt Problem},
+  title = {Centralsvensk diftongering som satsfonetiskt problem},
   author = {Bleckert, Lars},
   year = {1987},
   series = {Skrifter Utgivna Av {{Institutionen}} F\"or Nordiska Spr\aa k Vid {{Uppsala}} Universitet},
@@ -569,13 +569,12 @@
   file = {/Users/anpe7128/Zotero/storage/PNYSIHXY/Leinonen - An Acoustic Analysis of Vowel Pronunciation in Swe.pdf}
 }
 
-@article{Lindblom1963,
-  title = {Spectrogrphic Study of Vowel Reduction},
+@book{Lindblom1963,
+  title = {On vowel reduction},
   author = {Lindblom, B},
   year = {1963},
-  journal = {Journal of the Acoustical Society of America},
-  volume = {35},
-  pages = {1773--1781}
+  series = {Uppsala University},
+  address = {Uppsala}
 }
 
 @article{Lindblom1968,
