added missing refs

--- a/output/papers/latex-stuff/librarySweAcoust.bib
+++ b/output/papers/latex-stuff/librarySweAcoust.bib
@@ -310,6 +310,18 @@
   address = {{Odense}}
 }
 
+@article{fant1983,
+  title = {Feature Analysis of {{Swedish}} Vowels - a Revisit},
+  author = {Fant, Gunnar},
+  year = {1983},
+  journal = {STL-QPSR},
+  volume = {24},
+  number = {2-3},
+  pages = {001--019},
+  langid = {english},
+  file = {/Users/anpe7128/Zotero/storage/SPNIBXAS/Fant - Feature analysis of Swedish vowels - a revisit.pdf}
+}
+
 @article{fant2001,
   title = {Swedish Vowels and a New Three-Parameter Model},
   author = {Fant, Gunnar},
@@ -504,6 +516,16 @@
   year={1969}
 }
 
+@book{kotsinas1995,
+  title = {Dialekt},
+  author = {Kotsinas, Ulla-Britt},
+  year = {1995},
+  series = {Nationalencyklopedin},
+  number = {17},
+  pages={267--269},
+  address = {{H{\"o}gan{\"a}s}}
+}
+
 @book{krull1988,
   title = {Acoustic Properties as Predictors of Perceptual Responses: A Study of {{Swedish}} Voiced Stops},
   shorttitle = {Acoustic Properties as Predictors of Perceptual Responses},
@@ -558,6 +580,19 @@
   pages = {98--104}
 }
 
+@inproceedings{leinonen1982,
+  title = {Rikssvenskt och finlandssvenskt ljudsystem ur perceptionssynpunkt},
+  booktitle = {X Fonetiikan p{\"a}iv{\"a}t},
+  author = {Leinonen, K. and Pitk{\"a}nen, A. J., and Vihanta, V. V.},
+  year = {1981},
+  volume = {TaYSYLJ 7},
+  pages = {163--218},
+  publisher = {{DEPARTMENT OF FINNISH LANGUAGE AND GENERAL LINGUISTICS UNIVERSITY OF TAMPERE}},
+  address = {{Tampere, Finland}}
+}
+
+PUBLICATIONS- , NO 7, 163–218.
+
 @article{leinonen2010,
   title = {An {{Acoustic Analysis}} of {{Vowel Pronunciation}} in {{Swedish Dialects}}},
   author = {Leinonen, Therese},
@@ -569,15 +604,16 @@
   file = {/Users/anpe7128/Zotero/storage/PNYSIHXY/Leinonen - An Acoustic Analysis of Vowel Pronunciation in Swe.pdf}
 }
 
-@book{Lindblom1963,
+@book{lindblom1963,
   title = {On vowel reduction},
   author = {Lindblom, B},
   year = {1963},
   series = {Uppsala University},
+  note={Lic.avh. Uppsala : Univ.},
   address = {Uppsala}
 }
 
-@article{Lindblom1968,
+@article{lindblom1968,
   title = {Temporal Organization of Syllable Production},
   author = {Lindblom, B},
   year = {1968},
@@ -744,6 +780,18 @@
   file = {/Users/anpe7128/Zotero/storage/LP5L4BJH/Peterson - 1961 - Parameters of Vowel Quality.pdf}
 }
 
+@article{renwick-stanley2020,
+  title = {Modeling dynamic trajectories of front vowels in the American South},
+  author = {Renwick, Margaret E L and Stanley, Joseph A},
+  year = {2020},
+  journal = {The Journal of the Acoustical Society of America},
+  volume = {147},
+  number = {1},
+  pages = {579--595},
+  doi = {10.1121/10.0000549},
+  issn = {0001-4966}
+}
+
 @book{riad2014,
   title = {The Phonology of {{Swedish}}},
   author = {Riad, Tomas},
@@ -778,6 +826,21 @@
   year = {2011},
   address = {{Hong Kong}},
   isbn = {9789624423419}
+}
+
+@article{soskuthy2018,
+author = {Sóskuthy, Márton and Foulkes, Paul and Hughes, Vincent and Haddican, Bill},
+title = {Changing Words and Sounds: The Roles of Different Cognitive Units in Sound Change},
+journal = {Topics in Cognitive Science},
+volume = {10},
+number = {4},
+pages = {787-802},
+keywords = {Sound change, Cognitive categories, Frequency, Lexical diffusion, Dynamic acoustic analysis},
+doi = {https://doi.org/10.1111/tops.12346},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/tops.12346},
+eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/tops.12346},
+abstract = {Abstract This study considers the role of different cognitive units in sound change: phonemes, contextual variants and words. We examine /u/-fronting and /j/-dropping in data from three generations of Derby English speakers. We analyze dynamic formant data and auditory judgments, using mixed effects regression methods, including generalized additive mixed models (GAMMs). /u/-fronting is reaching its end-point, showing complex conditioning by context and a frequency effect that weakens over time. /j/-dropping is declining, with low-frequency words showing more innovative variants with /j/ than high-frequency words. The two processes interact: words with variable /j/-dropping (new) exhibit more fronting than words that never have /j/ (noodle) even when the /j/ is deleted. These results support models of change that rely on phonetically detailed representations for both word- and sound-level cognitive units.},
+year = {2018}
 }
 
 @article{soskuthy2021,
@@ -895,6 +958,18 @@
   abstract = {Wenner, L., 2010: N\"ar l\"ognare blir lugnare. En sociofonetisk studie av sammanfallet mellan kort \"o och kort u i uppl\"andskan. (When l\"ognare becomes lugnare. A sociophonetic study of the merger between short \"o and short u in Uppland Swedish.) Skrifter utgivna av Institutionen f\"or nordiska spr\aa k vid Uppsala universitet 80. 163 pp. Uppsala. ISSN 0083-4661, ISBN 97891-506-2132-7.},
   langid = {english},
   file = {/Users/anpe7128/Zotero/storage/8P6YV7AH/Wenner - När lögnare blir lugnare.pdf}
+}
+
+@article{xie2023,
+  title = {What We Do (Not) Know about the Mechanisms Underlying Adaptive Speech Perception: {{A}} Computational Review},
+  shorttitle = {What We Do (Not) Know about the Mechanisms Underlying Adaptive Speech Perception},
+  author = {Xie, Xin and Jaeger, T Florian and Kurumada, Chigusa},
+  year = {2023},
+  journal = {Cortex},
+  publisher = {{Open Science Framework}},
+  urldate = {2023-05-17},
+  abstract = {This project adopts computational approaches to explore mechanisms underlying exposure-driven changes of speech perception.},
+  collaborator = {Open Science Framework}
 }
 
 @article{young2021,
